--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = wemos_d1_uno32
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
 	madhephaestus/ESP32Servo@^3.0.9
 	links2004/WebSockets@^2.7.1
